--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.0",
+    "reactjs-popup": "^2.0.6",
     "yup": "^1.3.3"
   },
   "devDependencies": {
