--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-overlays": "^5.2.1",
     "react-router-dom": "^6.21.0",
     "reactjs-popup": "^2.0.6",
     "yup": "^1.3.3"
