--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-overlays": "^5.2.1",
     "react-router-dom": "^6.21.0",
     "reactjs-popup": "^2.0.6",
+    "sonner": "^1.4.41",
     "yup": "^1.3.3"
   },
   "devDependencies": {
