--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^4.12.0",
     "react-overlays": "^5.2.1",
     "react-router-dom": "^6.21.0",
+    "react-spinners": "^0.14.1",
     "react-use-is-online": "^1.2.2",
     "reactjs-popup": "^2.0.6",
     "sonner": "^1.4.41",
