--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^5.15.15",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-charts": "^7.3.0",
+    "@paystack/inline-js": "^2.22.1",
     "axios": "^1.6.7",
     "chart.js": "^4.4.2",
     "formik": "^2.4.5",
